Fixing after dependency cleanup